--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "nodemon server.js"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -19,4 +22,5 @@
     "mongoose": "^6.3.3",
     "nodemon": "^2.0.19"
   }
+  
 }
